--- a/Exoplanets In My Solar System.ipynb
+++ b/Exoplanets In My Solar System.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![caption](files/my_mercury.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
